[package]
name = "exam"
description = "Assess your project quality by running a series of exams on it"
version = "0.0.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
thiserror = "1"

[features]
